--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "server": "json-server --watch db.json --port 5000"
   },
   "dependencies": {
+    "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
